--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,315 +1,385 @@
 body {
-	font-family: 'Armata', sans-serif, 'Neucha';
+  font-family: 'Armata', sans-serif, 'Neucha';
 }
 
 .fa {
-	font-family: 'Armata', sans-serif, 'Neucha';
+  font-family: 'Armata', sans-serif, 'Neucha';
 }
 
 p {
-	padding-top: 15px;
-		color: #fff;
+  padding-top: 15px;
+  color: #fff;
 }
 
-	/*FONTS*/
+/*FONTS*/
 
 h2 {
-	font-family: "Rye", cursive, 'Armata', sans-serif;
-	font-size: 40px;
-	text-align: center;
+  font: 2em "Rye", cursive, 'Armata', sans-serif;
+  text-align: right;
 }
 
-h3 {font-family: 'Cabin Sketch', cursive, 'Armata', sans-serif; font-size: 70px; color: #090A53;border-bottom: 5px dashed blue;}
+h3 {
+  font: 5em 'Cabin Sketch', cursive, 'Armata', sans-serif;
+  color: #090A53;
+  border-bottom: 5px dashed blue;
+}
 
-h6 {font-family: 'Cabin Sketch', cursive, 'Armata', sans-serif; font-size: 20px;}
+h5 {
+  font: 2em 'Cabin Sketch', cursive, 'Armata', sans-serif;
+  color: #090A53;
+}
 
+h6 {
+  font: 20px 'Cabin Sketch', cursive, 'Armata', sans-serif;
+  color: #337ab7;
+}
 
 @font-face {
-    font-family: londonfog;
-    src: url(fonts/london.fog.ttf);
+  font-family: londonfog;
+  src: url(fonts/london.fog.ttf);
 }
 
+.shipping {
+  background: #000;
+  width: 100%;
+  height: 20px;
+  color: red;
+  text-align: center;
+  text-transform: uppercase;
+}
 
-.shipping { width: 100%; height: 20px; color: red; background-color: #000; text-align: center; text-transform: uppercase;}
-
-
-	/*NAVIGATION BAR*/
-
+/*NAVIGATION BAR*/
 
 .navbar {
-	background-color: #090A53;
+  background: #090A53;
 }
+
 .navbar-brand {
-	color: #fff;
-	font-size: 80px;
-	font-family: "london.fog", 'Armata', sans-serif;
-	padding-top: 40px;
+  font: 80px "london.fog", 'Armata', sans-serif;
+  color: #fff;
+  padding-top: 40px;
 }
 
 .navbar-brand:hover {
-	color: #337ab7;
+  color: #337ab7;
 }
 
 #social {
-	padding-top: 7em;
+  padding-top: 7em;
 }
 
 
-.container-main {
-	padding-bottom: 10em;
-	height: 60em;	
+/*BACK TO SHOPPING*/
+
+.checkout-header {
+	text-align: right;
 }
 
-	/*BUTTONS*/
-
-.btn {
-	width: 100%;
-	height: 50px;
-	text-transform: uppercase;
-	margin: auto;
+.men-main,
+.women-main {
+  color: #090A53; 
 }
 
-.btn-main_men,
-.btn-main_women {
-	font-family: "Rye",'Armata', sans-serif;
-	border: 1px solid #000;
+.men-main:hover,
+.women-main:hover {
+  font-size: 35px;
+  color: Orange; 
+  transition-duration:.20s;
+  transition-timing-function:ease-in-out;
+  text-decoration: none;
 }
 
-.btn-main_men {
-	color: #000;
-	background-color: #fff;
+
+
+i {
+  color: #090A53;
 }
 
-.btn-main_men:hover {
-	color: yellow;
-	background-color: #090A53;
+i.hand {
+  font-size: 30px;
+  color: #090A53;
+ 
+}
+i.hand:hover {
+  font-size: 40px;
+  color: Orange;
+  transition-duration:.20s;
+  transition-timing-function:ease-in-out; 
 }
 
-.btn-main_women {
-	color: #000;
-	background-color: #fff;
-}
 
-.btn-main_women:hover {
-	color: #FF36E1;
-	background-color: #FFB936;
-}
-
-a:hover {text-decoration: none;}
+/*BUTTONS*/
 
 span,
 span.contact {
-	color: #fff;
-	font-size: 15px;
-	font-family: "Rye",'Armata', sans-serif;
-	margin: 5px 5px;
+  font: 15px "Rye",'Armata', sans-serif;
+  color: #fff;
+  margin: 5px 5px;
 }
 
 span:hover,
 span.contact:hover {
-	color: #337ab7;
-	text-decoration: none;
+  color: #337ab7;
+  text-decoration: none;
 }
 
-
 i {
-	color: #fff;
+  color: #fff;
 }
 
 i:hover {
-	color: #337ab7;
-	text-decoration: none;
+  color: #337ab7;
+  text-decoration: none;
 }
 
-		/*FOOTER*/
-
+/*FOOTER*/
 
 footer {
-	height: 25%;
-	text-transform: uppercase;
-	text-align: center;
-	background-color: #090A53;
-	padding-bottom: 15px;
-	color: #fff;
+  background: #090A53;
+  height: 25%;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 15px;
+  color: #fff;
 }
 
-.footer-logo {float: left;}
+.footer-logo {
+  float: left;
+}
 
-.footer-area-container { background-color: #314A6E; height: 150px;}
+.footer-area-container {
+  background: #314A6E;
+  height: 150px;
+}
 
-.col-lg-6 {padding-top: 2em;}
+.col-lg-6 {
+  padding-top: 2em;
+}
 
 .social {
-	padding-top: 15px;
-	float: right;
+  padding-top: 15px;
+  float: right;
 }
 
-	/*=====Rows====*/
+/*ROWS*/
 
 .container,
-.container-fluid {width: 100%; height: 10em;}
+.container-fluid {
+  width: 100%;
+  height: 10em;
+}
 
-.container-fluid {margin-left: 10em;}
+.container-fluid {
+  margin-left: 10em;
+}
 
 .cta.col-sm-5 {
-	border: 10px groove blue;
-	height: 7em;
-	text-align: center;
+  border: 10px groove blue;
+  height: 7em;
+  text-align: center;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 .checkout-list-head,
 .checkout-total-bar {
-	display: inline-block;
+  display: inline-block;
 }
 
-.also-bought {
-	padding-top: 30px;
+.container-also {
+  text-align: center;
+  height: 35em;
+  padding-top: 6em;
 }
 
+.container-sale {
+  text-align: center;
+  height: 15em;
+}
 
+/*TABLE*/
 
+table {
+  width: 85%;
+  margin: 7em auto 0;
+  border-collapse: collapse;
+}
 
+thead {
+  background: navy;
+  background: linear-gradient(#49708f, #293f50);
+  color: Orange;
+}
 
+tbody {
+  font: bold 1.2em 'Lora', serif;
+}
 
-/*=====MEDIA QUERY====*/
+/*td:nth-child(1),
+td:nth-child(2),
+td:nth-child(3) {
+	text-align: center;
+}*/
 
+td:nth-child(5),
+td:nth-child(6) {
+  text-align: right;
+}
 
+th,
+td {
+  border: 1px solid #000;
+  padding: 10px 15px;
+}
 
+tfoot {
+  color: #337ab7;
+  text-align: right;
+}
+
+th {
+  font: 3em 'Cabin Sketch', cursive, 'Armata', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+tbody tr:nth-child(even) {
+  background: #e3e3e3;
+}
+
+/*Table border raduis*/
+
+/*th:first-child {
+  border-top-left-radius: 1em;
+  text-align: left;
+}
+th:last-child {
+  border-top-right-radius: 1em;
+}
+
+tfoot tr:last-child td:first-child {
+  border-bottom-left-radius: 1em;
+}
+tfoot tr:last-child td:last-child {
+  border-bottom-right-radius: 1em;
+}
+
+*/
+
+/*MEDIA QUERY*/
 
 @media (max-width:1330px) {
-	.navbar-brand{
-		font-size: 70px;
-	}
-
+  .navbar-brand {
+    font-size: 70px;
+  }
 }
 
 @media (max-width:1200px) {
-	.navbar-brand{
-		font-size: 60px;
-	}
+  .navbar-brand {
+    font-size: 60px;
+  }
 
-	.container-main {
-		height: 45em;
-	}
+  .container-main {
+    height: 45em;
+  }
 }
 
 @media (max-width: 1000px) {
-	.navbar {
-		height: 10em;
-	}	
+  .navbar {
+    height: 10em;
+  }
 
+  .navbar-brand {
+    font-size: 48px;
+  }
 
-	.navbar-brand{
-		font-size: 48px;
-	}
+  .container-main {
+    height: 45em;
+  }
 
-	.container-main {
-		height: 45em;
-	}
-
-	.btn {
-		width: 100%;
-	}
+  .btn {
+    width: 100%;
+  }
 }
 
-
-@media {
-	.navbar {
-		height: 10em;
-	}
+@media  {
+  .navbar {
+    height: 10em;
+  }
 }
-
 
 @media (max-width: 810px) {
-	.navbar-brand {
-		font-size: 40px;
-	}	
+  .navbar-brand {
+    font-size: 40px;
+  }
 }
-
 
 @media (max-width: 770px) {
-	.container-main {
-		height: 110em;
-	}	
+  .container-main {
+    height: 110em;
+  }
 
-	.btn {
-		width: 100%;
-		float: left;
-	}
-	
-	.navbar {
-		height: 10em;
-	}
+  .btn {
+    width: 100%;
+    float: left;
+  }
 
-	a.navbar-brand {
-		padding-top: 0;
-		line-height: 45px;
-		font-size: 42px;
-		line-height: inherit;
-	}
+  .navbar {
+    height: 10em;
+  }
 
-	#social {
-		padding-top: 5em;
-	}
+  a.navbar-brand {
+    padding-top: 0;
+    line-height: 45px;
+    font-size: 42px;
+    line-height: inherit;
+  }
 
-
+  #social {
+    padding-top: 5em;
+  }
 }
-
 
 @media (max-width: 710px) {
-	a.navbar-brand {
-		font-size: 52px;
-	}
-	.navbar {
-		height: 15em;
-	}
-	#social {
-		padding-top: 10em;
-	}
+  a.navbar-brand {
+    font-size: 52px;
+  }
+
+  .navbar {
+    height: 15em;
+  }
+
+  #social {
+    padding-top: 10em;
+  }
 }
-
-
 
 @media (max-width: 438px) {
+  .container-main {
+    height: 83em;
+  }
 
+  .btn {
+    width: 100%;
+    float: left;
+  }
 
-	.container-main {
-		height: 83em;
-	}	
+  .navbar-brand {
+    padding-top: 0;
+    line-height: 45px;
+    font-size: 42px;
+  }
 
-	.btn {
-		width: 100%;
-		float: left;
-	}
+  .navbar {
+    height: 23em;
+  }
 
-	.navbar-brand {
-		padding-top: 0;
-		line-height: 45px;
-		font-size: 42px;
-	}
-
-	.navbar {
-		height: 23em;
-	}
-
-	#social {
-		padding-top: 20em;
-	}
+  #social {
+    padding-top: 20em;
+  }
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
