--- a/css/index.css
+++ b/css/index.css
@@ -1,269 +1,296 @@
-body {
-	font-family: 'Armata', sans-serif, 'Neucha';
+body,
+html {
+  font-family: 'Armata', sans-serif, 'Neucha';
 }
+
 
 p {
-	color: #fff;
+  color: #000;
 }
 
-	/*FONTS*/
+/*FONTS*/
 
 h2 {
-	font-family: "Rye", cursive, 'Armata', sans-serif;
-	font-size: 40px;
-	text-align: center;
+  font: 40px "Rye", cursive, 'Armata', sans-serif;
+  text-align: center;
 }
 
+h6 {
+  font-family: 'cabin sketch', 'Armata', sans-serif;
+  font-size: 25px;
+
+}
 
 @font-face {
-    font-family: londonfog;
-    src: url(fonts/london.fog.ttf);
+  font-family: londonfog;
+  src: url(fonts/london.fog.ttf);
+}
+
+/*SHIPPING*/
+
+/*.fa-shopping-cart {
+  float: right;
+  color: #fff;
+}
+.fa-shopping-cart:hover {
+  color: orange;
+}*/
+
+i.cart {
+  color: #fff;
+}
+
+i.cart:hover {
+  color: orange;
 }
 
 
-.shipping { width: 100%; height: 20px; color: red; background-color: #000; text-align: center; text-transform: uppercase;}
+.shipping {
+  color: #337ab7;
+  background: #000;
+  width: 100%;
+  height: 38px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.shipping.container {
+  height: 2em;
+}
 
 
-	/*NAVIGATION BAR*/
 
+
+/*NAVIGATION BAR*/
 
 .navbar {
-	background-color: #090A53;
+  height: 12em;
+  background: #090A53;
 }
+
+
+.collapse.navbar-collapse {
+  margin-top: 8em;
+}
+
+
+ul.navbar-nav {
+  font-size: 1.9em;
+  text-transform: uppercase;
+  display: inline-block;
+
+}
+
+.nav>li>a {
+
+  color: orange;
+}
+
+.nav>li>a:hover {
+  color: #fff;
+  font-size: 30px;
+  transition-duration:.20s;
+  transition-timing-function:ease-in-out;
+  background-color: transparent;
+}
+
+
 .navbar-brand {
-	color: #fff;
-	font-size: 80px;
-	font-family: "london.fog", 'Armata', sans-serif;
-	padding-top: 40px;
+  font: 80px "london.fog", 'Armata', sans-serif;
+  color: #fff;
 }
 
-.navbar-brand:hover {
-	color: #337ab7;
+a.navbar-brand:hover {
+  color: orange;
 }
 
-#social {
-	padding-top: 7em;
+.nav .open>a,
+.nav .open>a:hover, 
+.nav .open>a:focus {
+  background: transparent;
+
 }
 
-
-.container-main {
-	padding-bottom: 10em;
-	height: 60em;	
+.dropdown-menu>li>a:hover{
+  color: orange;
+  background: #090A53;
 }
 
-	/*BUTTONS*/
-
-.btn {
-	width: 100%;
-	height: 50px;
-	text-transform: uppercase;
-	margin: auto;
-}
-
-.btn-main_men,
-.btn-main_women {
-	font-family: "Rye",'Armata', sans-serif;
-	border: 1px solid #000;
-}
-
-.btn-main_men {
-	color: #000;
-	background-color: #fff;
-}
-
-.btn-main_men:hover {
-	color: yellow;
-	background-color: #090A53;
-}
-
-.btn-main_women {
-	color: #000;
-	background-color: #fff;
-}
-
-.btn-main_women:hover {
-	color: #FF36E1;
-	background-color: #FFB936;
-}
-a:hover {text-decoration: none;}
-
-span,
-span.contact {
-	color: #fff;
-	font-size: 15px;
-	font-family: "Rye",'Armata', sans-serif;
-	margin: 5px 5px;
-}
-
-span:hover,
-span.contact:hover {
-	color: #337ab7;
-	text-decoration: none;
+.navbar-nav>li>.dropdown-menu {
+  background-color: #DBFFFD;
 }
 
 
-i {
-	color: #fff;
+/*CAROSEL*/
+  
+.carosel {
+  margin: 10em 5em; 
+  text-align: center;
 }
 
-i:hover {
-	color: #337ab7;
-	text-decoration: none;
+
+
+/*SOCIAL*/
+
+
+.social-banner {
+  background-color: #090A53;
+  text-align: center;
+  word-spacing: 2em;
 }
 
-		/*FOOTER*/
+.ig-feed,
+.twitter-feed {
+  border: 1px solid #000;
+  padding: 20em 3em;
+  text-align: center;
+}
 
+span.hashtag {
+  font-size: 2em;
+  vertical-align: middle;
+}
+
+  span,
+  span.contact {
+    font: 15px "Rye",'Armata', sans-serif;
+    color: #fff;
+    margin: 5px 5px;
+  }
+
+  span:hover,
+  span.contact:hover {
+    color: #337ab7;
+    text-decoration: none;
+  }
+
+
+/*FOOTER*/
 
 footer {
-	width: 100%;
-	text-transform: uppercase;
-	text-align: center;
-	background-color: #090A53;
-	padding-bottom: 20px;
-	color: #fff;
-	position: bottom;
+  background: #090A53;
+  width: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fff;
+  padding: 1em 0;
 }
 
-.footer-area-container { background-color: #314A6E;}
+h6.co-tag {
+  color: #337ab7
+}
+.footer-area-container {
+  background: #314A6E;
+}
 
-
-	/*=====Rows====*/
+/*ROWS*/
 
 .container,
-.container-fluid {width: 100%; height: 7em;}
+.container-fluid {
+  width: 100%;
+  height: 7em;
+}
 
-.container-fluid {margin-left: 10em;}
+.container-fluid {
+  margin-left: 10em;
+}
 
+/*MEDIA QUERY*/
 
-/*=====MEDIA QUERY====*/
 @media (max-width:1330px) {
-	.navbar-brand{
-		font-size: 70px;
-	}
-
+  .navbar-brand {
+    font-size: 70px;
+  }
 }
 
 @media (max-width:1200px) {
-	.navbar-brand{
-		font-size: 60px;
-	}
+  .navbar-brand {
+    font-size: 60px;
+  }
 
-	.container-main {
-		height: 45em;
-	}
+  .container-main {
+    height: 45em;
+  }
 }
 
 @media (max-width: 1000px) {
-	.navbar {
-		height: 10em;
-	}	
+  .navbar {
+    height: 10em;
+  }
+
+  .navbar-brand {
+    font-size: 48px;
+  }
+
+  .container-main {
+    height: 45em;
+  }
 
 
-	.navbar-brand{
-		font-size: 48px;
-	}
-
-	.container-main {
-		height: 45em;
-	}
-
-	.btn {
-		width: 100%;
-	}
 }
-
-
-@media {
-	.navbar {
-		height: 10em;
-	}
-}
-
 
 @media (max-width: 810px) {
-	.navbar-brand {
-		font-size: 40px;
-	}	
+  .navbar-brand {
+    font-size: 40px;
+  }
 }
-
 
 @media (max-width: 770px) {
-	.container-main {
-		height: 110em;
-	}	
-
-	.btn {
-		width: 100%;
-		float: left;
-	}
-	
-	.navbar {
-		height: 10em;
-	}
-
-	a.navbar-brand {
-		padding-top: 0;
-		line-height: 45px;
-		font-size: 42px;
-		line-height: inherit;
-	}
-
-	#social {
-		padding-top: 5em;
-	}
+  .container-main {
+    height: 110em;
+  }
 
 
+  .navbar {
+    height: 10em;
+  }
+
+  a.navbar-brand {
+    padding-top: 0;
+    line-height: 45px;
+    font-size: 42px;
+    line-height: inherit;
+  }
+
+  #social {
+    padding-top: 5em;
+  }
 }
-
 
 @media (max-width: 710px) {
-	a.navbar-brand {
-		font-size: 52px;
-	}
-	.navbar {
-		height: 15em;
-	}
-	#social {
-		padding-top: 10em;
-	}
+  a.navbar-brand {
+    font-size: 52px;
+  }
+
+  .navbar {
+    height: 15em;
+  }
+
+  #social {
+    padding-top: 10em;
+  }
 }
-
-
 
 @media (max-width: 438px) {
+  .container-main {
+    height: 83em;
+  }
 
 
-	.container-main {
-		height: 83em;
-	}	
+  .navbar-brand {
+    padding-top: 0;
+    line-height: 45px;
+    font-size: 42px;
+  }
 
-	.btn {
-		width: 100%;
-		float: left;
-	}
+  .navbar {
+    height: 23em;
+  }
 
-	.navbar-brand {
-		padding-top: 0;
-		line-height: 45px;
-		font-size: 42px;
-	}
-
-	.navbar {
-		height: 23em;
-	}
-
-	#social {
-		padding-top: 20em;
-	}
+  #social {
+    padding-top: 20em;
+  }
 }
-
-
-
-
-
-
-
-
 
 
 
