--- a/css/main.css
+++ b/css/main.css
@@ -1,231 +1,250 @@
 body {
-	font-family: 'Armata', sans-serif, 'Neucha';
+  font-family: 'Armata', sans-serif, 'Neucha';
 }
 
 p {
-	padding-top: 15px;
-	color: #fff;
+  padding-top: 15px;
+  color: #fff;
 }
 
-								/*=====FONTS======*/
+/*=====FONTS======*/
 
 h2 {
-	font-family: "Rye", cursive, 'Armata', sans-serif;
-	font-size: 40px;
-	text-align: center;
+  font: 40px "Rye", cursive, 'Armata', sans-serif;
+  text-align: center;
 }
 
-h3 {font-family: 'Cabin Sketch', cursive, 'Armata', sans-serif; font-size: 70px; color: #090A53;}
-h3:hover {text-decoration: none;}
+h3 {
+  font: 70px 'Cabin Sketch', cursive, 'Armata', sans-serif;
+  color: #090A53;
+}
 
-h6 {font-family: 'Cabin Sketch', cursive, 'Armata', sans-serif; font-size: 20px;}
+h3:hover {
+  text-decoration: none;
+}
 
+h6 {
+  font: 20px 'Cabin Sketch', cursive, 'Armata', sans-serif;
+}
 
 @font-face {
-    font-family: londonfog;
-    src: url(fonts/london.fog.ttf);
+  font-family: londonfog;
+  src: url(fonts/london.fog.ttf);
 }
 
-
-.shipping { 
-	width: 100%;
-	height: 40px !important; 
-	color: #337ab7;
-	background-color: #000; 
-	text-transform: uppercase;
-	font-size: 15px;
+.shipping {
+  background: #000;
+  width: 100%;
+  height: 40px !important;
+  color: #337ab7;
+  text-transform: uppercase;
+  font-size: 15px;
 }
 
-
-								/*====NAVIGATION BAR=====*/
-
+/*====NAVIGATION BAR=====*/
 
 .navbar {
-	background-color: #090A53;
+  background: #090A53;
 }
+
 .navbar-brand {
-	color: #fff;
-	font-size: 80px;
-	font-family: "london.fog", 'Armata', sans-serif;
-	padding-top: 40px;
+  font: 80px "london.fog", 'Armata', sans-serif;
+  color: #fff;
+  padding-top: 40px;
 }
 
 .navbar-brand:hover {
-	color: #337ab7;
+  color: orange;
+}
+
+.quick-nav {
+  font: 20px/1.5em 'Armata', sans-serif;
+  color: #090A53l;
+  padding-top: 20px;
+ 
 }
 
 .social {
-	padding-top: 15px;
-	float: right;
+  padding-top: 15px;
+  float: right;
 }
 
 .logo {
-	position: relative;
-	left: 15em;
-	bottom: 7em;
+  position: relative;
+  left: 15em;
+  bottom: 7em;
 }
 
-.item-result-count {font-family: 'Armata', sans-serif, 'Neucha'; color: #090A53;}
+.item-result-count {
+  font-family: 'Armata', sans-serif, 'Neucha';
+  color: #090A53;
+}
 
-										/*====BUTTONS====*/
-
+/*====BUTTONS====*/
 
 span,
 span.contact {
-	color: #fff;
-	font-size: 15px;
-	font-family: "Rye",'Armata', sans-serif;
-	margin: 5px 5px;
+  font: 15px "Rye",'Armata', sans-serif;
+  color: #fff;
+  margin: 5px 5px;
 }
 
 span:hover,
 span.contact:hover {
-	color: #337ab7;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
 
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 
-i {
-	color: #090A53;
-}
 
 i:hover {
-	color: #337ab7;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
 
-i.cart{
-	color: #fff;
+i.cart {
+  color: #fff;
 }
 
 i.cart:hover {
-	color: #337ab7;
+  color: orange;
 }
-
-#quick-nav {
-	color: #fff;
-}
-
 
 .items-ordering {
-	padding-bottom: 2em;
+  padding-bottom: 2em;
 }
 
-										/*====FOOTER====*/
-
+/*====FOOTER====*/
 
 footer {
-	height: 25%;
-	text-transform: uppercase;
-	text-align: center;
-	background-color: #090A53;
-	padding-bottom: 15px;
-	color: #fff;
+  background: #090A53;
+  height: 25%;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 15px;
+  color: #fff;
 }
 
-.footer-logo {float: left;}
+.footer-logo {
+  float: left;
+}
 
-.footer-area-container { background-color: #314A6E; height: 150px;}
+.footer-area-container {
+  background: #314A6E;
+  height: 150px;
+}
 
-
-										/*====ROWS====*/
+/*====ROWS====*/
 
 .container,
-.container-fluid {width: 100%; height: 9em;}
+.container-fluid {
+  width: 100%;
+  height: 9em;
+}
 
-.container-fluid {margin-left: 10em;}
+.container-fluid {
+  margin-left: 10em;
+}
 
-ul { list-style: none; width: 75%; padding-left: 0;}
+ul {
+  list-style: none;
+  width: 75%;
+  padding-left: 0;
+}
 
-ul.pagination-sm {display: inline-block;}
+ul.pagination-sm {
+  display: inline-block;
+}
 
-.col-1-3 {display: inline-block;}
+.col-1-3 {
+  display: inline-block;
+}
 
-.col-sm-2 {padding-left: 3em;}
+.col-sm-2 {
+  padding-left: 3em;
+}
 
-.col-sm-3 {padding-top: 0;}
+.col-sm-3 {
+  padding-top: 0;
+}
 
-.col-lg-6 {padding-top: 2em;}
+.col-lg-6 {
+  padding-top: 2em;
+}
 
-.col-lg-9 {padding: 20px;}
-
-#quick-nav {font-family: 'Armata', sans-serif; color:#090A53; padding-top: 20px; font-size: 20px; border-right: dashed 1px; line-height: 1.5em;}
-
-a.quick_nav {color: red;}
-
-.clearfix {display: inline-block;}
-
-
-
-										/*========Media Query - Index==========*/
+.col-lg-9 {
+  padding: 20px;
+}
 
 
+
+.clearfix {
+  display: inline-block;
+}
+
+/*========Media Query - Index==========*/
 
 @media (max-width:1330px) {
-	.navbar-brand{
-		font-size: 70px;
-	}
-
+  .navbar-brand {
+    font-size: 70px;
+  }
 }
 
 @media (max-width:1200px) {
-	.navbar-brand{
-		font-size: 60px;
-	}
+  .navbar-brand {
+    font-size: 60px;
+  }
 
-	.container-main {
-		height: 110em;
-	}
+  .container-main {
+    height: 110em;
+  }
 }
 
 @media (max-width: 1000px) {
-	.navbar-brand{
-		font-size: 55px;
-	}
+  .navbar-brand {
+    font-size: 55px;
+  }
 
-	.container-main {
-		height: 110em;
-	}
+  .container-main {
+    height: 110em;
+  }
 
-	.btn {
-		width: 60%;
-	}
+  .btn {
+    width: 60%;
+  }
 }
 
 @media (max-width: 600px) {
-	.container {
-		height: 150px;
-	}	
+  .container {
+    height: 150px;
+  }
 
-	.btn {
-		width: 80%;
-		float: left;
-	}
+  .btn {
+    width: 80%;
+    float: left;
+  }
 }
 
 @media (max-width: 375px) {
-	.contianer {
-		height: 10em;
-	}	
+  .contianer {
+    height: 10em;
+  }
 
+  .container-main {
+    height: 83em;
+  }
 
-	.container-main {
-		height: 83em;
-	}	
+  .btn {
+    width: 100%;
+    float: left;
+  }
 
-	.btn {
-		width: 100%;
-		float: left;
-	}
-
-	.navbar-brand {
-		padding-top: 0;
-		line-height: 45px;
-		font-size: 42px;
-	}
+  .navbar-brand {
+    padding-top: 0;
+    line-height: 45px;
+    font-size: 42px;
+  }
 }
-
-
