--- a/css/main.css
+++ b/css/main.css
@@ -48,9 +48,10 @@ h6 {
 }
 
 .navbar-brand {
-  font: 80px "london.fog", 'Armata', sans-serif;
+  font: 80px 'Architects Daughter', cursive;
   color: #fff;
-  padding-top: 40px;
+  padding: 0 20px;
+  font-weight: 600;
 }
 
 .navbar-brand:hover {
@@ -58,11 +59,24 @@ h6 {
 }
 
 .quick-nav {
-  font: 20px/1.5em 'Armata', sans-serif;
+  font: 25px/1.5em 'Armata', sans-serif;
   color: #090A53l;
-  padding-top: 20px;
- 
+
 }
+
+.quick-nav:hover { 
+  font-size: 30px;
+  color: #FF9500;
+  transition-duration:.10s;
+  transition-timing-function:ease-in-out; 
+}
+ 
+#quick-nav.col-sm-2 {
+  padding-top: 5em;
+  border-right:2px dotted darkblue;
+}
+
+
 
 .social {
   padding-top: 15px;
@@ -82,6 +96,18 @@ h6 {
 
 /*====BUTTONS====*/
 
+.btn {
+  background: navy;
+  background: linear-gradient(#49708f, #293f50);
+  color: #FF9500;
+}
+div.product-price {
+  font-size: 20px;
+}
+
+a.btn.atc {
+  margin-left: 5em;
+}
 span,
 span.contact {
   font: 15px "Rye",'Armata', sans-serif;
@@ -137,6 +163,10 @@ footer {
   height: 150px;
 }
 
+.footer-widget {
+  padding-top: 2em;
+}
+
 /*====ROWS====*/
 
 .container,
@@ -179,7 +209,9 @@ ul.pagination-sm {
   padding: 20px;
 }
 
-
+.col-sm-12.men_shirts {
+  margin:3em 0;
+}
 
 .clearfix {
   display: inline-block;
